--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "connect-history-api-fallback": "^1.3.0",
-    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.1",
     "mongoose": "^5.0.6",
     "vue": "^2.2.2",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
